// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Github should handle GITHUB_GET_REPOS 1`] = `
Object {
  "user": Object {
    "data": Object {},
    "message": "",
    "repos": Array [],
    "status": "running",
  },
  "users": Object {
    "data": Object {},
    "message": "",
    "status": "idle",
  },
}
`;

exports[`Github should handle GITHUB_GET_REPOS_FAILURE 1`] = `
Object {
  "user": Object {
    "data": Object {},
    "message": "Something went wrong",
    "repos": Array [],
    "status": "error",
  },
  "users": Object {
    "data": Object {},
    "message": "",
    "status": "idle",
  },
}
`;

exports[`Github should handle GITHUB_GET_REPOS_SUCCESS 1`] = `
Object {
  "user": Object {
    "data": Object {},
    "message": "",
    "repos": Array [],
    "status": "ready",
  },
  "users": Object {
    "data": Object {},
    "message": "",
    "status": "idle",
  },
}
`;

exports[`Github should return the initial state 1`] = `
Object {
  "user": Object {
    "data": Object {},
    "message": "",
    "repos": Array [],
    "status": "idle",
  },
  "users": Object {
    "data": Object {},
    "message": "",
    "status": "idle",
  },
}
`;
